--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -23,7 +23,7 @@
 				<ul class="mui-table-view">
 					<li class="mui-table-view-cell">
 						<a href="#picture">
-							<img class="mui-media-object mui-pull-right" id="img" src="../../image/slide_navigation/img3.jpg">
+							<img class="mui-media-object mui-pull-right" id="img" src="../../image/utils/default_personalimage.png">
 							<div class="mui-pull-left ">
 								头像
 							</div>
