--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -399,7 +399,7 @@
 									//存储自动登录
 //									loginInfo.auto = 1;
 //									window.myStorage.setItem(window.storageKeyName.AUTOLOGIN, loginInfo);
-									events.openNewWindowWithData('../../html/index.html', '');
+									events.openNewWindowWithData('../index/index.html', '');
 								}
 							});
 						} else {
