--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -156,7 +156,7 @@
 										if(tempFlag == 0) {
 											window.myStorage.getItem(window.storageKeyName.PERSONALINFO).ispw = '1';
 											mui.toast('修改密码成功');
-											events.openNewWindowWithData('../../html/index.html', '');
+											events.openNewWindowWithData('../index/index.html', '');
 										} else { //在设置里面退出时，设置密码
 											//修改自动登录值
 											window.myStorage.setItem(window.storageKeyName.PERSONALINFO,null);
@@ -176,7 +176,7 @@
 				});
 				//取消按钮
 				events.addTap('cancelBtn', function() {
-					events.openNewWindowWithData('../../html/index.html', '');
+					events.openNewWindowWithData('../index/index.html', '');
 				});
 			});
 		</script>
