--- a/JiaoBaoYun-hb/html/quan/aboutme_sub.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme_sub.html
@@ -339,7 +339,7 @@
 			totalCnt = 0;
 			flag = 2; //刷新
 			var comData = {
-				userId: '', //用户ID
+				userId: personalUTID, //用户ID
 				pageIndex: '1', //当前页数
 				pageSize: '10' //每页记录数
 			};
@@ -365,7 +365,7 @@
 				flag = 1; //加载更多
 				tempPage++;
 				var comData = {
-					userId: '', //用户ID
+					userId: personalUTID, //用户ID
 					pageIndex: (tempPage).toString(), //当前页数
 					pageSize: '10' //每页记录数
 				};
