--- a/JiaoBaoYun-hb/html/quan/leave.html
+++ b/JiaoBaoYun-hb/html/quan/leave.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
 	</head>
 
 	<body>
@@ -22,28 +23,10 @@
 	</body>
 
 	<script type="text/javascript">
-		//启用双击监听
-		mui.init({
-			gestureConfig: {
-				doubletap: true
-			},
-			subpages: [{
-				url: 'leave-sub.html',
-				id: 'leave-sub.html',
-				styles: {
-					top: '45px',
-					bottom: localStorage.getItem('$Statusbar'),
-				}
-			}]
-		});
-
-		var contentWebview = null;
-		document.querySelector('header').addEventListener('doubletap', function() {
-			if(contentWebview == null) {
-				contentWebview = plus.webview.currentWebview().children()[0];
-			}
-			contentWebview.evalJS("mui('#pullrefresh').pullRefresh().scrollTo(0,0,100)");
-		});
+		mui.plusReady(function() {
+			var data = plus.webview.currentWebview().data;
+			events.initSubPage('leave-sub.html', data);
+		})
 	</script>
 
 </html>
