修改上传头像

--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -77,11 +77,11 @@
 			</div>
 
 		</div>
-		<div id="picture" class="mui-popover mui-popover-action mui-popover-bottom">
+		<!--<div id="picture" class="mui-popover mui-popover-action mui-popover-bottom">
 			<ul class="mui-table-view">
-				<!--<li class="mui-table-view-cell">
+				<li class="mui-table-view-cell">
 					<a id="take-pic" href="#">拍照</a>
-				</li>-->
+				</li>
 				<li class="mui-table-view-cell">
 					<a id="open-album" href="#">相册</a>
 				</li>
@@ -91,7 +91,7 @@
 					<a href="#picture"><b>取消</b></a>
 				</li>
 			</ul>
-		</div>
+		</div>-->
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/libs/myStorage/myStorage.js"></script>
 		<script src="../../js/storageKeyName.js"></script>
