申请记录界面 申请入群界面

--- a/JiaoBaoYun-hb/html/mine.html
+++ b/JiaoBaoYun-hb/html/mine.html
@@ -114,6 +114,7 @@
 							break;
 							//申请加入群
 						case 2:
+							events.openNewWindow('mine/apply-record.html');
 							break;
 							//新消息
 						case 3:
