--- a/JiaoBaoYun-hb/html/quan/pub-leave.html
+++ b/JiaoBaoYun-hb/html/quan/pub-leave.html
@@ -19,7 +19,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav common-background-bar ">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left common-color-white"></a>
-			<h1 class="mui-title common-color-white common-font-family-Regular">留言</h1>
+			<h1 class="mui-title common-color-white common-font-family-Regular">写留言</h1>
 			<a id="publish" class="mui-pull-right mui-plus-visible">发表</a>
 		</header>
 		<div class="mui-content mo-background-color">
@@ -31,20 +31,25 @@
 	</body>
 	<script>
 		mui.plusReady(function() {
-			var httpData = plus.webview.currentWebview().data;
+			var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
+			var userOwnerId = plus.webview.currentWebview().data;
 			var leaveContent = document.getElementById('content');
 			events.addTap('publish', function() {
 				if(!leaveContent.value) {
 					mui.toast('请输入留言');
 					return;
 				}
-				httpData.msgContent = leaveContent.value;
+				var httpData = {
+					userId:personalUTID,
+					userOwnerId: userOwnerId,
+					msgContent:leaveContent.value
+				}
 				console.log('httpData === ' + JSON.stringify(httpData));
 				// 等待的对话框
 				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-				postDataPro_addUserSpaceMsgReply(httpData, wd, function(data) {
+				postDataPro_addUserSpaceMsg(httpData, wd, function(data) {
 					wd.close();
-					console.log('postDataPro_addUserSpaceMsgReply:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt + data.RspData.TotalCnt);
+					console.log('addUserSpaceMsg:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt + data.RspData.TotalCnt);
 					if(data.RspCode == 0) {
 						mui.toast('成功')
 						leaveContent.value = '';
