--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -11,84 +11,64 @@
 		<!--本页面样式表-->
 		<link rel="stylesheet" href="../../css/home/zone.css" />
 		<script type="text/javascript" src="../../js/mui.min.js"></script>
-		<script type="text/javascript" src="../../js/quan/tab-zone.js" ></script>
+		<!--本页js文件-->
+		<script type="text/javascript" src="../../js/quan/tab-zone.js"></script>
 		<!--公用事件js文件-->
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
-		<script type="text/javascript" src="../../js/libs/myStorage/myStorage.js"></script>
-		<script type="text/javascript" src="../../js/storageKeyName.js"></script>
 		<!--侧滑-->
 		<script type="text/javascript" src="../../js/main/slide_navigation.js"></script>
 		<script>
-		var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;//用户id
-		var datasource=[];//底部列表数据
-		var topArray=[];//顶部班级列表数据
-		var requestTimes;//记录班级空间请求次数--等于0时，请求完毕，刷新界面
-		var requestTimes2;//记录群用户列表请求次数--等于0时，请求完毕，刷新界面
-		var isRefresh=0;//是否下拉刷新--1：下拉刷新 0：不是下拉刷新
+			var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
+			var datasource = []; //底部列表数据
+			var topArray = []; //顶部班级列表数据
+			var requestTimes; //记录班级空间请求次数--等于0时，请求完毕，刷新界面
+			var requestTimes2; //记录群用户列表请求次数--等于0时，请求完毕，刷新界面
+			var isRefresh = 0; //是否下拉刷新--1：下拉刷新 0：不是下拉刷新
 		</script>
-		<style type="text/css">/*自定义系统segmentcontrol控件*/
-
-
-/*整体控件样式*/
-
-.mui-segmented-control {
-	font-size: 14px;
-	width: 100%;
-	border: 0px solid gray;
-	background-color: transparent;
-}
-
-.mui-segmented-control .mui-control-item {
-	/*行高*/
-	line-height: 30px;
-	/*字体颜色*/
-	color: black;
-	/*中间竖线颜色*/
-	border-left: 1px solid gray;
-	margin-left: -20px;
-}
-
-
-/*选择的item样式*/
-
-.mui-segmented-control.mui-segmented-control .mui-control-item.mui-active {
-	color: #007aff;
-	border-bottom: 0px solid red;
-	background: 0 0
-}
-
-.spliter {
-	color: #bbb;
-	margin-right: -15px;
-}
-
-
-/*通过下面的class名区分列表*/
-
-
-/*第一个班级列表*/
-
-
-/*.parent-table1 {}*/
-
-
-/*第一个班级列表cell*/
-
-
-/*.parent-cell1 {}*/
-
-
-/*第二个班级列表*/
-
-
-/*.parent-table2 {}*/
-
-
-/*第二个班级列表cell*/
-
-
-/*.parent-cell2 {}*/</style>
+		<style type="text/css">
+			/*自定义系统segmentcontrol控件*/
+			/*整体控件样式*/
+			
+			.mui-segmented-control {
+				font-size: 14px;
+				width: 100%;
+				border: 0px solid gray;
+				background-color: transparent;
+			}
+			
+			.mui-segmented-control .mui-control-item {
+				/*行高*/
+				line-height: 30px;
+				/*字体颜色*/
+				color: black;
+				/*中间竖线颜色*/
+				border-left: 1px solid gray;
+				margin-left: -20px;
+			}
+			/*选择的item样式*/
+			
+			.mui-segmented-control.mui-segmented-control .mui-control-item.mui-active {
+				color: #007aff;
+				border-bottom: 0px solid red;
+				background: 0 0
+			}
+			/*群分割竖线*/
+			
+			.spliter {
+				color: #bbb;
+				margin-right: -15px;
+			}
+			/*通过下面的class名区分列表*/
+			/*第一个班级列表*/
+			/*.parent-table1 {}*/
+			/*第一个班级列表cell*/
+			/*.parent-cell1 {}*/
+			/*第二个班级列表*/
+			/*.parent-table2 {}*/
+			/*第二个班级列表cell*/
+			/*.parent-cell2 {}*/
+		</style>
 	</head>
 
 	<body>
@@ -129,22 +109,17 @@
 					</li>-->
 
 				</ul>
-
 				<!--标题栏-->
-				<h4 >
+				<h4>
+					<!--家长圈标题左边的图片-->
 					<img style="height: 30px;"  src="../../image/tab_zone/u127.png" / >
 					<span  class="parent">家长圈</span>
-					<!--<hr class="vertical-line" />-->
+					<!--群组-->
 					<div style="padding-left: 90px;padding-bottom: 20px; margin-top: -35px;">
-
 				<div  class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-primary">
 					<div id="segmentedControl" class="mui-scroll">
-
-
-
-						</div>
-
-
+						
+					</div>
 				</div>
 			</div>
 				</h4>
