--- a/JiaoBaoYun-hb/html/mine/add-info.html
+++ b/JiaoBaoYun-hb/html/mine/add-info.html
@@ -9,6 +9,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<link href="../../css/mine/apply.css" rel="stylesheet"/>
 	</head>
 
 	<body>
@@ -25,7 +26,7 @@
 		            <li class="mui-table-view-cell mui-selected">
 		                <a class="mui-navigate-right">无可绑定资料</a>
 		            </li>
-		        	<li class="mui-table-view-divider">学生资料</li>
+		        	<!--<li class="mui-table-view-divider">学生资料</li>
 		            <li class="mui-table-view-cell">
 		                <a class="mui-navigate-right">
 		                <img src="../../image/cloud/cloud_personalimage.png" />	学生 1</a>
@@ -45,13 +46,15 @@
 		            </li>
 		            <li class="mui-table-view-cell">
 		                <a class="mui-navigate-right">老师 3</a>
-		            </li>
+		            </li>-->
 		        </ul>
 		        
 		        </div>
 		    </div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/mine/add-info.js"></script>
 		<!--<script type="text/javascript">
 			mui.init()
 		</script>-->
