--- a/JiaoBaoYun-hb/html/mine/qun_data_create.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_create.html
@@ -1,26 +1,358 @@
+<!--
+	作者：444811716@qq.com
+	时间：2016-11-24
+	描述：创建群资料
+-->
 <!doctype html>
 <html>
 
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>创建群资料</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<link rel="stylesheet" href="../../css/mui.picker.min.css" />
+		<link rel="stylesheet" href="../../css/mui.poppicker.css" />
+		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/mui.picker.min.js"></script>
+		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+		<style>
+			body,
+			.mui-content {
+				background: white;
+			}
+
+			.mui-content>.mui-table-view:first-child {
+				margin-top: 0px
+			}
+
+			.mui-table-view:before,
+			.mui-table-view:after {
+				height: 0px;
+			}
+
+			.mui-table-view-cell {
+				padding: 5px 15px;
+			}
+
+			.mui-table-view-cell:after {
+				left: 0px;
+			}
+
+			.mui-input-row label {
+				width: 20%;
+				padding: 11px 0px
+			}
+
+			.mui-input-row label~input {
+				width: 80%;
+			}
+
+			.gender {
+				/*性别选择*/
+				float: right;
+				width: 80%;
+				height: 40px;
+				padding: 10px 15px;
+				padding-left: 0px;
+				line-height: 21px;
+				-webkit-user-select: text;
+				border-radius: 3px;
+				outline: 0;
+				-webkit-appearance: none;
+				font-size: 17px;
+			}
+		</style>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">账号资料</h1>
+			<h1 class="mui-title" style="text-align: left;">创建资料</h1>
 			<a id="finish" class="mui-pull-right">完成</a>
 		</header>
 		<div class="mui-content mui-scroll-wrapper">
-			
+			<div class="mui-scroll">
+				<ul class="mui-table-view">
+					<div id="stu_create" style="display:none;">
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>学生姓名:</label>
+								<input id="stu_name" type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>学生账号:</label>
+								<input id="stu_utid" type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>学生电话:</label>
+								<input type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row ">
+								<label>性别:</label>
+								<div id="stu_gender" class="gender"></div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>昵称:</label>
+								<input type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>所属群:</label>
+								<input id="stu_gname" type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>简介:</label>
+								<input type="text" class="mui-input-clear">
+							</div>
+						</li>
+					</div>
+					<div id="par_create" style="display:none;">
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>家长姓名:</label>
+								<input id="par_name" type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>家长账号:</label>
+								<input id="par_utid" type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>关系:</label>
+								<input type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>电话:</label>
+								<input type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>所属群:</label>
+								<input id="par_gname" type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>简介:</label>
+								<input type="text" class="mui-input-clear">
+							</div>
+						</li>
+					</div>
+					<div id="tea_create" style="display: none;">
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>姓名:</label>
+								<input id="tea_name" type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>账号:</label>
+								<input id="tea_utid" type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>昵称:</label>
+								<input type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>性别:</label>
+								<div id="tea_gender" class="gender"></div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>所属群:</label>
+								<input id="tea_gname" type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>职位:</label>
+								<input id="tea_job" type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>科目:</label>
+								<input id="tea_sub" type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>职称:</label>
+								<input id="tea_title" type="text" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>教龄:</label>
+								<input id="tea_expsch" type="number" class="mui-input-clear">
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-input-row">
+								<label>简介:</label>
+								<input id="tea_introduction" type="text" class="mui-input-clear">
+							</div>
+						</li>
+					</div>
+				</ul>
+			</div>
 		</div>
-		<script src="../../js/mui.min.js"></script>
+
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
+			mui.plusReady(function() {
+
+				var mstype = ''; //创建的资料类型0家长,2老师,3学生
+				//---从父页面获取数据---start---
+				var main = plus.webview.currentWebview(); //获取当前窗体对象
+				var data = main.data; //接收页面传入的参数值
+				//var data = {
+				//	gid: gid, //群id
+				//	gname: gname, //群名称
+				//	type: type, //资料类型
+				//}
+				console.log('从群资料页面获取的数据:' + JSON.stringify(data));
+				switch(data.type) {
+					case 'student': //学生
+						mstype = 3;
+						createStu();
+						break;
+					case 'teacher': //老师
+						mstype = 2;
+						createTea();
+						break;
+					case 'parents': //家长
+						//mstype = 0;
+						//createPar();
+						mstype = 3;
+						createStu();
+						break;
+					default:
+						console.log('资料类型选择出错');
+						break;
+				}
+				console.log(mstype);
+				//---从父页面获取数据---end---
+				mui('.mui-scroll-wrapper').scroll({
+					scrollY: true, //是否竖向滚动
+					bounce: true, //是否启用回弹
+				});
+
+				//创建学生资料
+				function createStu() {
+					document.getElementById("stu_gname").value = data.gname;
+					document.getElementById("stu_create").style.display = 'inline';
+				}
+
+				//创建老师资料
+				function createTea() {
+					document.getElementById("tea_gname").value = data.gname;
+					document.getElementById("tea_create").style.display = 'inline';
+				}
+
+				//创建家长资料
+				function createPar() {
+					document.getElementById("par_gname").value = data.gname;
+					document.getElementById("par_create").style.display = 'inline';
+				}
+				var genderPicker = new mui.PopPicker();
+				genderPicker.setData([{
+					value: '男',
+					text: '男'
+				}, {
+					value: '女',
+					text: '女'
+				}]);
+
+				//性别监听
+				mui('.mui-content').on('tap', '.gender', function() {
+					console.log('gender:' + this.getAttribute('id'));
+					document.activeElement.blur(); //强制隐藏软键盘
+					var id = this.getAttribute('id')
+					genderPicker.show(function(items) {
+						document.getElementById(id).innerText = items[0].value;
+						//返回 false 可以阻止选择框的关闭
+						//return false;
+					});
+				});
+
+				//完成按钮监听
+				document.getElementById('finish').addEventListener('tap', function() {
+					var name = ''; //姓名
+					var job = '0'; //职位，老师用,其他填0
+					var title = '0'; //职称，老师用,其他填0
+					var expsch = '0'; //教龄，老师用,其他填0
+					var sub = '0'; //科目，老师用,其他填0
+
+					if(mstype == 3) { //资料类型0家长,2老师,3学生
+						name = document.getElementById("stu_name").value;
+					} else if(mstype == 0) {
+						name = document.getElementById("par_name").value;
+					} else {
+						name = document.getElementById("tea_name").value;
+						job = document.getElementById("tea_job").value;
+						title = document.getElementById("tea_title").value;
+						expsch = document.getElementById("tea_expsch").value;
+						sub = document.getElementById("tea_sub").value;
+					}
+					if(name.replace(/(^\s*)|(\s*$)/g, "") == "") { //为空不允许发送
+						mui.toast('姓名不允许为空');
+					} else {
+						//15.用户添加资料
+						//所需参数
+						var comData = {
+							gid: data.gid, //群ID
+							stuname: name, //资料名
+							stuimg: '', //资料头像
+							mstype: mstype, //资料类型，0家长,2老师,3学生
+							job: job, //职位，老师用,其他填0
+							title: title, //职称，老师用,其他填0
+							expsch: expsch, //教龄，老师用,其他填0
+							sub: sub, //科目，老师用,其他填0
+							gutid: '0' //关联的群账号ID，用户在群里的账号ID,无则为0
+						};
+						console.log('comData:' + JSON.stringify(comData));
+						// 等待的对话框
+						var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+						postDataPro_PostGAddUInf(comData, wd, function(data) {
+							wd.close();
+							console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+							if(data.RspCode == 0) {
+								mui.toast('资料添加成功！');
+								console.log('资料添加成功！');
+							} else {
+								mui.toast(data.RspTxt);
+							}
+						});
+					}
+				});
+
+			})
 		</script>
 	</body>
 
