--- a/JiaoBaoYun-hb/html/quan/aboutme_sub.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme_sub.html
@@ -330,7 +330,7 @@
 								//当前model
 								var tempModel = data1.RspData[i];
 								//更新头像
-								tempModel.uimg = updateHeadImg(tempModel.uimg)
+								tempModel.uimg = updateHeadImg(tempModel.uimg,1);
 								//循环留言数组
 								for(var item in tempRspData) {
 									//当前循环的model
